--- a/Assests/css/newpage.css
+++ b/Assests/css/newpage.css
@@ -42,15 +42,15 @@
 	height: 600px; 
 	width: 1350px;
 }
-	.head-page h3{
+.head-page h3{
     font-family: Arial,sans-serif; 
 	background-color: rgba(10, 14, 14, 0.68);
 	border-radius: 5px;
 	font-size: 35px;
 	text-transform: uppercase;
 	position: relative;
-    left: 0;
-    width: 100%;
+        left: 0;
+        width: 100%;
 }
 .carousel-caption .head-page{
 	bottom: 150px;
@@ -67,7 +67,6 @@
 }
 .portfolio-img .col-md-4{
 	padding: 10px;
-
 }
 .portfolio-img img
   {
@@ -77,17 +76,16 @@
 	padding:10px;
 	box-shadow:  0 1px 1px 0 rgba(0, 0, 0, 0.40);
 	-webkit-transition: width 0.2s,height 0.2s;
-    transition: width 0.2s,height 0.2s;
-    transition-timing-function: ease-out;
+        transition: width 0.2s,height 0.2s;
+        transition-timing-function: ease-out;
    }
   .portfolio-img img:hover{
   	background: 3px rgba(251,192,12,0.84);
-    width: 260px;
-    height: 255px; 
+        width: 260px;
+        height: 255px; 
   }
-
-    .first-img .img-responsive{
-  	display: block;
+.first-img .img-responsive{
+    display: block;
     max-width: 100%;
     height: auto; !important
     height:345px; 
@@ -100,31 +98,25 @@
   	color:white;
   	text-transform: uppercase;
   	font-family: 'Merienda One';
-  	
-  }
-.page3
-{
+  	}
+.page3{
 	background-color:  #2c3e50;
 }
-.third-page
-{
+.third-page{
   padding: 80px;
 }
-.third
-{
+.third{
 	float: left;
 	color: white;
 }
-.para
-{
+.para{
 	padding-right: 30px;
 	padding-left: 30px;
 	text-align: justify;
-    font-family: 'roboto';
-    font-size: 20px;
+        font-family: 'roboto';
+         font-size: 20px;
 }
-.page4
-{
+.page4{
 	background-color: #2c3e50;
 	padding-top: 40px;
 	padding-bottom: 40px;
@@ -151,7 +143,6 @@
 	font-family: 'Bitter', serif;
 }
 .team p{
-	
 	font-size: 18px;
 	color: white;
 	font-family: 'roboto';
@@ -167,13 +158,11 @@
 	font-family: 'roboto';
 	font-weight: 700;
 	}
-	.app-section .btn{
+.app-section .btn{
 		font-family: 'roboto';
 		font-size: 20px;
-
-	}
-.form-control
-{
+         }
+.form-control{
 	background: none;
 	border: none;
 	box-shadow: none;
@@ -189,40 +178,33 @@
     padding-right: 5px;
     padding-left: 5px;
 }
-#footer
-{
+#footer{
 	padding-top: 35px;
 	padding-bottom: 35px;
 	background-color: #1A202D;
 	color: white;
 }
-#footer img
-{
+#footer img{
 	height: 42px;
 	width: 42px;
 	padding: 0px;
 	transition-timing-function: ease-in;
 }
-
-#footer li
-{
+#footer li{
     list-style:none;
 	display: inline;
 }
-.footer-heading
-{
+.footer-heading{
 	text-align:center;
 	font-size:20px;
 	text-decoration:underline;
 	font-family: 'Bitter', serif;
 }
-.foot-part
-{
+.foot-part{
 	font-family: 'Fontin', sans-serif;
-    font-size: 15px;
+        font-size: 15px;
 }
-#footer-last
-{ 
+#footer-last{ 
 	background-color: #030917;
 	color:white;
 	padding-top: 15px;
@@ -238,31 +220,7 @@
 }
 @media screen and (max-width: 412px) { 
 	.head-page h3{
-    font-weight: 200;
+        font-weight: 200;
 	font-size: 15px; 
     } 
 }
-/*@media (min-width: @screen-sm-max) { 
-	.container {
-		width: 750px;
-		}
-   .head-page h3{ 
-	
-	font-weight: 450;
-	font-size: 40px;
-
-} 
-	}
-@media (min-width: @screen-md-min) {
-	.container { 
-		   width: 890px;
-	}
-}
-@media (min-width: @screen-lg-min){ 
-.container {
-	    width:1170px;
-	}}
-
-
-	
-
