--- a/Assests/css/newpage.css
+++ b/Assests/css/newpage.css
@@ -29,8 +29,7 @@
 	background-color: #18bc9c;
 	border-radius:4px;
 }
-.container-fluid
-{
+.container-fluid{
 	padding-left: 0px;
 	padding-right: 0px;
 }
@@ -49,49 +48,44 @@
 	font-size: 35px;
 	text-transform: uppercase;
 	position: relative;
-        left: 0;
-        width: 100%;
+    left: 0;
+    width: 100%;
 }
 .carousel-caption .head-page{
 	bottom: 150px;
 }
-.item img {
+.item img{
 	height: 380px ; 
 	width: 1340px;
 }
-.page2
-{
+.page2{
 	background-color: #18bc9c;
-	padding-top: 40px;
+	padding-top: 62px;
 	padding-bottom: 40px;
 }
 .portfolio-img .col-md-4{
 	padding: 10px;
 }
-.portfolio-img img
-  {
+.portfolio-img img{
 	margin: 0 auto;
 	height: 250px;
 	width: 255px;
 	padding:10px;
 	box-shadow:  0 1px 1px 0 rgba(0, 0, 0, 0.40);
-	-webkit-transition: width 0.2s,height 0.2s;
-        transition: width 0.2s,height 0.2s;
-        transition-timing-function: ease-out;
-   }
-  .portfolio-img img:hover{
+	transition: all .2s ease-in-out ;
+}
+.portfolio-img img:hover{
   	background: 3px rgba(251,192,12,0.84);
-        width: 260px;
-        height: 255px; 
+    transform:scale(1.04);
   }
 .first-img .img-responsive{
-    display: block;
+  	display: block;
     max-width: 100%;
     height: auto; !important
     height:345px; 
     width:1350px;
   }
-  .head-section{
+.head-section{
   	text-align:center;
   	font-size:35px;
   	font-weight: 400;
@@ -99,8 +93,9 @@
   	text-transform: uppercase;
   	font-family: 'Merienda One';
   	}
-.page3{
+.page3 {
 	background-color:  #2c3e50;
+	padding-top: 2%;
 }
 .third-page{
   padding: 80px;
@@ -113,13 +108,16 @@
 	padding-right: 30px;
 	padding-left: 30px;
 	text-align: justify;
-        font-family: 'roboto';
-         font-size: 20px;
+    font-family: 'roboto';
+    font-size: 20px;
 }
-.page4{
+.page5{
 	background-color: #2c3e50;
-	padding-top: 40px;
+	padding-top: 45px;
 	padding-bottom: 40px;
+}
+.customNavigation{
+	background-color: #2C3E50;
 }
 .team-leader{
 	background-color: #18bc9c;
@@ -130,11 +128,11 @@
 	margin: 0 auto;
 	height: 280px;
 	width: 280px;
+	transition: all .2s ease-in-out;
 }
 .team img:hover{
 	border:3px solid white;
-	height: 284px;
-	width: 284px;
+	trasform:scale(0.9);
 }
 .team h4{
 	text-align: center;
@@ -143,9 +141,11 @@
 	font-family: 'Bitter', serif;
 }
 .team p{
+	
 	font-size: 18px;
 	color: white;
 	font-family: 'roboto';
+	text-align: justify;
 }
 .app-section {
 	padding-top: 35px;
@@ -160,8 +160,21 @@
 	}
 .app-section .btn{
 		font-family: 'roboto';
-		font-size: 20px;
-         }
+		font-size: 18px;
+		font-weight: 500;
+		padding-left: 10px;
+		padding-right: 10px;
+		transition: all .2s ease-out;
+}
+.btn{
+	border-radius: 0px;
+}
+.app-section .btn:hover{
+     color: #5BC0DE;
+     background-color: white;
+     border-color: 7px solid #5BC0DE;
+     border-radius: 8px;
+}
 .form-control{
 	background: none;
 	border: none;
@@ -173,22 +186,19 @@
     font-size: 20px;
     font-family: 'roboto';
 }
-.btn{
-    padding: 10px;
-    padding-right: 5px;
-    padding-left: 5px;
+.submit .btn{
+	    font-family: 'roboto';
+		font-size: 18px;
+		font-weight: 500;
+		padding-left: 25px;
+		padding-right: 25px;
+		transition: all .2s ease-out;
 }
 #footer{
 	padding-top: 35px;
 	padding-bottom: 35px;
 	background-color: #1A202D;
 	color: white;
-}
-#footer img{
-	height: 42px;
-	width: 42px;
-	padding: 0px;
-	transition-timing-function: ease-in;
 }
 #footer li{
     list-style:none;
@@ -197,19 +207,39 @@
 .footer-heading{
 	text-align:center;
 	font-size:20px;
-	text-decoration:underline;
 	font-family: 'Bitter', serif;
 }
 .foot-part{
 	font-family: 'Fontin', sans-serif;
-        font-size: 15px;
+    font-size: 15px;
+}
+.fa{
+    color: white;
+    padding: 2px;
+    transition: all .2s ease-in-out;
+}
+.facebook:hover{
+	color: #3b5998;
+	transform: scale(0.97);
+}
+.fa-google-plus-square:hover{
+	color:  #dd4b39;
+	transform: scale(0.97);
+}
+.fa-twitter-square:hover{
+	color: #00aced;
+	transform: scale(0.97);
+}
+.fa-linkedin-square:hover{
+	color: #007bb6;
+	transform: scale(0.97);
 }
 #footer-last{ 
 	background-color: #030917;
 	color:white;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	padding-right: 15px;
+	padding-right: 115px;
 	text-align: right;
 }
 @media screen and (min-width: 767px) {
@@ -220,7 +250,7 @@
 }
 @media screen and (max-width: 412px) { 
 	.head-page h3{
-        font-weight: 200;
+    font-weight: 200;
 	font-size: 15px; 
     } 
 }
